switch to html5, mobile site, humans.txt, etc.